--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -932,7 +932,7 @@ nav {
             overflow-x: scroll !important;
             white-space: nowrap;
             padding: 0 65px;
-            height: calc(30vh + 25px);
+            height: calc(30vh + 30px);
             > li {
                 display: inline-block !important;
                 position: relative !important;
